# perp-quant-bot

./: .env.example  .gitignore  ARCHITECTURE.md  GO_LIVE.md  README.md  RESEARCH_LOG.md  SECURITY.md  liquidations_log.parquet  microstructure_log.parquet  opennews_log.parquet  pyproject.toml
.github/workflows/: liquidations-logger.yml  microstructure-logger.yml  opennews-logger.yml
config/: config.yaml
docs/: quant-methodology.md
models/: .gitkeep
scripts/: backfill_opennews.py  ci_liquidations_poll.py  ci_microstructure_poll.py  ci_opennews_poll.py  compare_meta.py  microstructure_history_test.py
src/perp_quant_bot/: __init__.py  cli.py  config.py  logging_conf.py
src/perp_quant_bot/backtest/: __init__.py  engine.py  metrics.py  report.py
src/perp_quant_bot/data/: __init__.py  binance_vision.py  exchange.py  funding.py  ohlcv.py  opennews.py
src/perp_quant_bot/execution/: __init__.py  broker.py  carry_executor.py  paper.py
src/perp_quant_bot/features/: __init__.py  cross_asset.py  microstructure.py  news_features.py  pipeline.py  technical.py
src/perp_quant_bot/labeling/: __init__.py  meta.py  triple_barrier.py
src/perp_quant_bot/models/: __init__.py  base.py  gbm.py
src/perp_quant_bot/pipeline/: __init__.py  diagnostics.py  liquidations_logger.py  microstructure_logger.py  news_logger.py  trade.py  train.py
src/perp_quant_bot/risk/: __init__.py  manager.py
src/perp_quant_bot/strategies/: __init__.py  basis_carry.py  cross_exchange.py  cross_sectional.py  (+2 more)
tests/: test_leakage.py  test_microstructure.py  test_news_features.py  test_smoke.py
(+3 files in other folders)
